--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <script>
-    var countDownDate = new Date("Sep 15, 2023 14:30:00").getTime();
+    var countDownDate = new Date("Dec 23 2023 15:30:01").getTime();
     var displaySeconds = false;
     var x;
 
